# things-cli

./: .codecov.yml  .travis.yml  Pipfile  README.md  README.rst  intents.json  lambda.py  setup.cfg
tests/: test_main.py  test_smtp.py
things_cli/: main.py  smtp.py
