[metadata]
name = things-cli
author = Rustem Sayargaliev
author-email = r.sayargaliev@gmail.com
summary = Command-line interface for Things 3.
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = https://github.com/amureki/things-cli
license = Apache-2
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    things
    cli

[files]
packages =
    things-cli

[entry_points]
console_scripts =
    things = things_cli.main:cli